Update JavaRegexSubpatterns.java